# fastapi-todo

./: .gitignore  pyproject.toml  requirements.txt
app/: auth.py  config.py  db.py  dependencies.py  main.py  models.py  todo.py
src/: main.py
