[project]
name = "fastapi-todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "psycopg2-binary>=2.9.11",
    "sqlmodel>=0.0.37",
]

[project.scripts]
app = "app.main:app"

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
